создал скрипт инициализации БД

--- a/warehouse/static/histogram.html
+++ b/warehouse/static/histogram.html
@@ -12,9 +12,9 @@
 </p>
 <h2>Гистограмма без группировки</h2>
 <img src="/static/1.jpg">
-<h2>Гистограмма с группировкой по 10</h2>
+<h2>Гистограмма с группировкой в 10 сегментов</h2>
 <img src="/static/3.jpg">
-<h2>Гистограмма с группировкой по 5</h2>
+<h2>Гистограмма с группировкой в 5 сегментов</h2>
 <img src="/static/2.jpg">
 </body>
 </html>
